@@ -8,6 +8,7 @@ Bug fixes:
 ~~~~~~~~~~
 - getFileInfo returned 'None' when file had no modification date; nows returns
   the default empty string.
+- Handling of empty fields (regression)
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
